--- a/css/custom.css
+++ b/css/custom.css
@@ -26,7 +26,6 @@
 .welcome-message-container{
 	height: 100vh;
     width: 80vw;
-    background-color: #F9F3F3;
     position: absolute;
     right: 0;
 
@@ -51,10 +50,30 @@
 }
 .message-box{
 	width: 40vw;
-    height: 40vh;
+    height: auto;
     position: relative;
     background-color: white;
     left: 40%;
 	margin-top: -200px;
 	z-index: 1001;
+}
+.calendar-title{
+	margin-top: 120px;
+}
+.calendar-events{
+	border-left: 4px solid white;
+}
+.svg-icon{
+	width: 90px;
+	height: auto;
+	display: inline-block;
+}
+.fact-title{
+	margin-left: 10px;
+	display: inline-block;
+	vertical-align: bottom;
+	width: calc(100% - 120px);
+}
+.spring-wood-bg{
+	background-color: #F9F3F3;
 }
