responsive + indicated div where display none should be

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,13 @@ body {
   	border-bottom-width: 30px;
   */ }
 
+.margin-from-title {
+  margin-top: 150px; }
+
+.section-width {
+  width: 70vw;
+  margin: auto; }
+
 .section-title {
   font-size: 3.5rem;
   font-weight: 500; }
@@ -124,9 +131,11 @@ body {
     .welcome-message-container {
       display: none; } }
 
-@media only screen and (max-width: 640px) {
-  .text-body {
-    font-size: 0.9em; } }
+.text-body {
+  font-size: 0.9em; }
+  @media only screen and (max-width: 640px) {
+    .text-body {
+      font-size: 0.9em; } }
 
 .home-calendar {
   background-color: #9B2437;
@@ -165,11 +174,12 @@ body {
   text-align: center; }
   @media only screen and (max-width: 640px) {
     .column-title {
-      text-align: left; } }
+      text-align: left;
+      font-size: 1.5em; } }
 
 .column-header {
   font-weight: 600;
-  font-size: 1.4em; }
+  font-size: 1.2em; }
   @media only screen and (max-width: 640px) {
     .column-header {
       font-size: 1.2em; } }
@@ -209,7 +219,7 @@ body {
       margin-top: 30px; } }
 
 .svg-icon {
-  width: 90px;
+  width: 70px;
   height: auto; }
   @media only screen and (max-width: 640px) {
     .svg-icon {
@@ -217,11 +227,29 @@ body {
 
 .fact-card {
   display: inline-block;
-  width: 27%; }
+  width: calc(69vw / 3); }
   @media only screen and (max-width: 640px) {
     .fact-card {
       width: auto;
       margin-top: 15px; } }
+
+.left-fact-padding {
+  padding-right: 60px; }
+  @media only screen and (max-width: 640px) {
+    .left-fact-padding {
+      padding-right: 0px; } }
+
+.mid-fact-padding {
+  padding: 0 30px; }
+  @media only screen and (max-width: 640px) {
+    .mid-fact-padding {
+      padding: 0 0; } }
+
+.right-fact-padding {
+  padding-left: 60px; }
+  @media only screen and (max-width: 640px) {
+    .right-fact-padding {
+      padding-left: 0px; } }
 
 .fact-title {
   margin-left: 10px;
@@ -250,6 +278,11 @@ body {
       height: auto;
       background-color: white; } }
 
+@media only screen and (max-width: 640px) {
+  .intro-section-button {
+    padding: 0 20px;
+    line-height: 45px; } }
+
 .page-hero {
   background-size: cover;
   height: 55vh;
@@ -262,6 +295,7 @@ body {
   @media only screen and (max-width: 640px) {
     .page-hero {
       position: static;
+      height: 35vh;
       width: 100%; } }
 
 .bg-intro-text {
@@ -286,11 +320,24 @@ body {
 
 .admission-process-section {
   height: 50vh; }
+  @media only screen and (max-width: 640px) {
+    .admission-process-section {
+      height: auto; } }
 
 .mission-statement {
   vertical-align: top;
   width: calc(100% - 120px);
   font-size: 1.2em; }
+  @media only screen and (max-width: 640px) {
+    .mission-statement {
+      font-size: 1em;
+      width: auto;
+      text-align: left; } }
+
+@media only screen and (max-width: 640px) {
+  .mission-statement-icon {
+    width: 45px;
+    text-align: center; } }
 
 .mgt-image {
   width: 200px; }
@@ -305,6 +352,10 @@ body {
   width: 50vw;
   height: 10vh;
   border: none; }
+  @media only screen and (max-width: 640px) {
+    .admission-cta-button-inner {
+      width: auto;
+      height: auto; } }
 
 /*Campus Life*/
 .campus-life-calendar {
