--- a/css/custom.css
+++ b/css/custom.css
@@ -13,10 +13,19 @@ body {
 
 html {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
 
 *, *:before, *:after {
   box-sizing: inherit; }
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer; }
+
+a:hover {
+  color: #9B2437; }
 
 @font-face {
   font-family: verdana;
@@ -43,6 +52,9 @@ body {
 .section-width {
   width: 70vw;
   margin: auto; }
+  @media only screen and (max-width: 640px) {
+    .section-width {
+      width: 80vw; } }
 
 .section-title {
   font-size: 3.5rem;
@@ -93,23 +105,44 @@ body {
 
 .school-menu-card {
   font-size: 16px;
-  width: calc(25% - 1px);
+  height: auto;
+  width: 25%;
   border-right: 1px solid #F3F1F2; }
   @media only screen and (max-width: 640px) {
     .school-menu-card {
       width: 100%;
-      border-bottom: 1px solid #F3F1F2; } }
+      border-bottom: 1px solid #F3F1F2;
+      height: auto; } }
 
 .school-menu-card:hover {
-  background-color: #9B2437;
-  color: white !important; }
+  border-right: none;
+  color: white !important;
+  animation: menu-hover-reveal 1s forwards; }
 
 .school-menu-card:hover > .uk-padding .school-menu-text-age > .splash-burgundy {
   color: white; }
 
+.school-menu-card:hover > .uk-padding .school-menu-text-age > .superscript {
+  border-bottom: 1px solid white; }
+
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow path {
+  fill: white !important; }
+
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow {
+  -webkit-animation-name: bounce;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 0.8s;
+  /* Safari 4.0 - 8.0 */
+  animation-name: bounce;
+  animation-iteration-count: infinite; }
+
 .school-menu-text-title {
+  height: 100px;
   font-weight: 600;
   font-size: 2em; }
+
+.menu-arrow-icon {
+  margin: 40px 0 20px 0; }
 
 .school-menu-text-age {
   display: block; }
@@ -133,6 +166,10 @@ body {
   @media only screen and (max-width: 640px) {
     .welcome-message-container {
       display: none; } }
+
+.menu-svg-arrow {
+  width: 40px;
+  height: auto; }
 
 .text-body {
   font-size: 0.9em; }
@@ -281,10 +318,17 @@ body {
       height: auto;
       background-color: white; } }
 
-@media only screen and (max-width: 640px) {
-  .intro-section-button {
-    padding: 0 20px;
-    line-height: 45px; } }
+.intro-section-button {
+  border: 1px solid #9B2437; }
+  @media only screen and (max-width: 640px) {
+    .intro-section-button {
+      padding: 0 20px;
+      line-height: 45px; } }
+
+.intro-section-button:hover {
+  border: 1px solid #9B2437;
+  color: #9B2437;
+  background-color: white; }
 
 .page-hero {
   background-size: cover;
@@ -411,7 +455,8 @@ header {
   padding: 0 25px; }
 
 .clear-menu li:hover {
-  color: #2980b9; }
+  color: #9B2437;
+  font-weight: 500; }
 
 .logo-div {
   position: absolute;
@@ -421,6 +466,13 @@ header {
 @media only screen and (max-width: 640px) {
   .logo-div {
     padding: 5px 0; } }
+.mobile-logo-div {
+  position: absolute;
+  padding: 15px 5px;
+  z-index: 200;
+  width: 50px;
+  top: 0; }
+
 @media only screen and (max-width: 640px) {
   .mobile-center {
     text-align: center; } }
@@ -476,28 +528,25 @@ header {
   color: #9B2437; }
 
 .mobile-menu li {
+  border-top: 1px solid #F3F1F2;
   display: block;
-  padding: 15px 0px;
-	font-weight: 400;
+  padding: 13px 0;
   font-size: 1rem;
   color: #353535;
   white-space: nowrap;
-  transition: all .5s ease-in-out; 
-/*	border-bottom: 1px solid #F3F1F2;*/
-	border-top: 1px solid #F3F1F2;
-}
-.mobile-menu ul{
-	padding-left: 0;
-}
+  transition: all .5s ease-in-out; }
 
 .menu-open {
   width: 100vw;
   left: 0;
   color: white; }
 
-.menu-open .mobile-menu li {
-/*  text-indent: 10vw; */
-}
+.mobile-menu ul {
+  padding-left: 0px; }
+
+.mobile-menu-button {
+  width: 100%;
+  color: white; }
 
 .menu-closed {
   width: 0;
@@ -520,9 +569,18 @@ header {
 @media only screen and (max-width: 640px) {
   .mini-banner-wrap {
     background-attachment: scroll; } }
-.mobile-menu-button{
-	width: 100%;
-	color: white;
-}
+@keyframes bounce {
+  50% {
+    transform: translateX(20px); } }
+@keyframes menu-hover-reveal {
+  0% {
+    box-shadow: 10px 15px white;
+    background-color: white; }
+  25% {
+    background-color: #9B2437;
+    box-shadow: 20px 25px #ff00003d; }
+  100% {
+    background-color: #9B2437;
+    box-shadow: 15px 20px #ff00003d; } }
 
 /*# sourceMappingURL=custom.css.map */
