--- a/css/custom.scss
+++ b/css/custom.scss
@@ -29,11 +29,20 @@ body{
 html{	
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 *, *:before, *:after{
 	box-sizing: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer; }
+a:hover{
+	color: $burgundy;
+	
+}
 @font-face {
   font-family: verdana;
   src: url('../font/Verdana.ttf');
@@ -61,6 +70,9 @@ body{
 .section-width{
 	width: 70vw;
 	margin: auto;
+	@media #{$phone}{
+		width: 80vw;
+	}
 }
 .section-title{
 	font-size: 3.5rem;
@@ -112,24 +124,44 @@ body{
 }
 .school-menu-card{
 	font-size: 16px;
-	width: calc(25% - 1px);
+	height: auto;
+	width: 25%;
 	border-right: 1px solid #F3F1F2;
 	@media #{$phone}{
 		width: 100%;
 		border-bottom: 1px solid #F3F1F2;
+		height: auto;
 	}
 }
 .school-menu-card:hover {
-	background-color: $burgundy;
+//	background-color: $burgundy;
+	border-right: none;
 	color: white !important;
+	animation: menu-hover-reveal 1s forwards;
 }
 .school-menu-card:hover > .uk-padding .school-menu-text-age > .splash-burgundy{
 	color:white;
 }
+.school-menu-card:hover > .uk-padding .school-menu-text-age > .superscript{
+	border-bottom: 1px solid white;
+}
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow  path{
+	fill: white !important;
+}
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow{
+	-webkit-animation-name: bounce; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 0.8s; /* Safari 4.0 - 8.0 */
+    animation-name: bounce;	
+    animation-iteration-count: infinite;
+}
+
 .school-menu-text-title{
-	
+	height: 100px;
 	font-weight: 600;
 	font-size: 2em;
+}
+.menu-arrow-icon{
+	margin: 40px 0 20px 0;
 }
 
 .school-menu-text-age{
@@ -157,6 +189,10 @@ body{
 		display: none;
 	}
 
+}
+.menu-svg-arrow{
+	width: 40px;
+	height: auto;
 }
 .text-body{
 	font-size: 0.9em;
@@ -309,10 +345,16 @@ body{
 	}
 }
 .intro-section-button{
+	border: 1px solid $burgundy;
 	@media #{$phone}{
 		padding: 0 20px;
 		line-height: 45px;
 	}
+}
+.intro-section-button:hover{
+	border: 1px solid $burgundy;
+	color: $burgundy;
+	background-color: white;
 }
 .page-hero{
 	background-size: cover;
@@ -444,7 +486,9 @@ header {
     color: black;
     padding: 0 25px; }
     .clear-menu li:hover {
-      color: #2980b9; }
+      color: $burgundy;
+		font-weight: 500;
+}
 .logo-div {
   position: absolute;
   padding: 15px 35px;
@@ -452,6 +496,15 @@ header {
   @media only screen and (max-width: 640px) {
     .logo-div {
       padding: 5px 0; } }
+
+.mobile-logo-div{
+	  position: absolute;
+	  padding: 15px 5px;
+	  z-index: 200;
+	width: 50px;
+	top: 0;
+}
+
 
 @media only screen and (max-width: 640px) {
   .mobile-center {
@@ -509,20 +562,28 @@ header {
   color: $burgundy; }
 
 .mobile-menu li {
-  display: block;
-  margin-bottom: 35px;
-  font-size: 1.5rem;
-  color: #353535;
-  white-space: nowrap;
-  transition: all .5s ease-in-out; }
+	border-top: 1px solid #F3F1F2;
+	display: block;
+	padding: 13px 0;
+	font-size: 1rem;
+	color: #353535;
+	white-space: nowrap;
+	transition: all .5s ease-in-out; }
 
 .menu-open {
   width: 100vw;
   left: 0;
   color: white; }
   .menu-open .mobile-menu li {
-    text-indent: 10vw; }
-
+//    text-indent: 10vw; 
+}
+.mobile-menu ul {
+    padding-left:  0px; 
+}
+.mobile-menu-button{
+	width: 100%;
+	color: white;
+}
 .menu-closed {
   width: 0;
   left: 100vw; }
@@ -541,3 +602,25 @@ header {
   @media only screen and (max-width: 640px) {
     .mini-banner-wrap {
       background-attachment: scroll; } }
+
+
+@keyframes bounce {
+  50% { transform: translateX(20px); }
+
+}
+@keyframes menu-hover-reveal{
+	0% {
+		box-shadow: 10px 15px white;
+		background-color: white;
+  }
+	25%{
+		background-color: $burgundy;
+		box-shadow: 20px 25px #ff00003d;
+	}
+  100% {
+	  
+	  background-color: $burgundy;
+	  box-shadow: 15px 20px #ff00003d;
+  }
+}
+
