--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,3 @@
-a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer; }
-
 body {
   width: 100vw;
   margin: 0;
@@ -10,6 +5,14 @@ body {
   overflow-x: hidden;
   font-size: 100%;
   -webkit-font-smoothing: antialiased; }
+
+/* utility */
+html.sr .load-hidden {
+  visibility: hidden; }
+
+/* extension */
+html.sr .school-menu-card {
+  visibility: hidden; }
 
 html {
   -webkit-box-sizing: border-box;
@@ -125,8 +128,11 @@ body {
 .school-menu-card:hover > .uk-padding .school-menu-text-age > .superscript {
   border-bottom: 1px solid white; }
 
-.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow path {
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow path, .school-menu-card:hover > .uk-padding .menu-arrow-icon > .academics-menu-svg-arrow path {
   fill: white !important; }
+
+.academics-menu-svg-arrow {
+  transform: rotate(90deg); }
 
 .school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow {
   -webkit-animation-name: bounce;
@@ -134,6 +140,14 @@ body {
   -webkit-animation-duration: 0.8s;
   /* Safari 4.0 - 8.0 */
   animation-name: bounce;
+  animation-iteration-count: infinite; }
+
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow {
+  -webkit-animation-name: bounce-down;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 0.8s;
+  /* Safari 4.0 - 8.0 */
+  animation-name: bounce-down;
   animation-iteration-count: infinite; }
 
 .school-menu-text-title {
@@ -167,7 +181,7 @@ body {
     .welcome-message-container {
       display: none; } }
 
-.menu-svg-arrow {
+.menu-svg-arrow, .academics-menu-svg-arrow {
   width: 40px;
   height: auto; }
 
@@ -451,8 +465,7 @@ header {
   list-style-type: none;
   font-size: 0.8em;
   text-transform: uppercase;
-  color: black;
-  padding: 0 25px; }
+  color: black; }
 
 .clear-menu li:hover {
   color: #9B2437;
@@ -572,6 +585,9 @@ header {
 @keyframes bounce {
   50% {
     transform: translateX(20px); } }
+@keyframes bounce-down {
+  50% {
+    transform: translateY(20px); } }
 @keyframes menu-hover-reveal {
   0% {
     box-shadow: 10px 15px white;
@@ -582,5 +598,35 @@ header {
   100% {
     background-color: #9B2437;
     box-shadow: 15px 20px #ff00003d; } }
+li a {
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+  width: auto;
+  color: #222;
+  font-size: 1em;
+  text-decoration: none;
+  padding: 0 10px;
+  white-space: no-wrap; }
+
+li a:before {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 60%;
+  position: absolute;
+  z-index: 1;
+  left: 0px;
+  bottom: 22%;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #ff00003d 50%);
+  background-position: -0% 0;
+  background-size: 200% 10px;
+  transition: background-position 0.2s ease-out;
+  -webkit-transform: skew(0deg, -1.5deg);
+  transform: skew(0deg, -1.5deg);
+  opacity: 0.8; }
+
+li a:hover:before {
+  background-position: -99.99% 0; }
 
 /*# sourceMappingURL=custom.css.map */
