--- a/css/custom.scss
+++ b/css/custom.scss
@@ -50,7 +50,7 @@ a:hover{
 }
 @font-face {
   font-family: charter;
-  src: url('../font/CharterBlackBT.ttf');
+//  src: url('../font/CharterBlackBT.ttf');
 }
 body{
 	font-family: verdana, Verdana, sans-serif;
@@ -64,22 +64,31 @@ body{
 }
 .margin-from-title{
 	margin-top: 150px;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
+		margin-top: 50px;
+	}
+	@media #{$tablet}{
 		margin-top: 50px;
 	}
 }
 .section-width{
 	width: 70vw;
 	margin: auto;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: 80vw;
+	}
+	@media #{$tablet}{
+		width: 85vw;
 	}
 }
 .section-title{
 	font-size: 3.5rem;
 	font-weight: 500;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		font-size: 2rem;
+	}
+	@media #{$tablet}{
+		font-size: 2.2rem;
 	}
 
 }
@@ -112,6 +121,9 @@ body{
 .muted-page-title{
 	font-size: 8rem;
 	font-weight: 600;
+	@media #{$tablet}{
+		font-size: 4em;
+	}
 }
 /*HOME*/
 .home-hero{
@@ -123,12 +135,19 @@ body{
 	width: 100%;
 	font-size: 0;
 }
+.school-menu-text-body{
+	height: 50px;
+		@media #{$tablet}{
+			font-size: 0.8em;
+		}
+}
 .school-menu-card{
+	vertical-align: top;
 	font-size: 16px;
 	height: auto;
 	width: 25%;
 	border-right: 1px solid #F3F1F2;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: 100%;
 		border-bottom: 1px solid #F3F1F2;
 		height: auto;
@@ -138,6 +157,7 @@ body{
 //	background-color: $burgundy;
 	border-right: none;
 	color: white !important;
+	background: none;
 	animation: menu-hover-reveal 1s forwards;
 }
 .school-menu-card:hover > .uk-padding .school-menu-text-age > .splash-burgundy{
@@ -150,7 +170,7 @@ body{
 	fill: white !important;
 }
 .academics-menu-svg-arrow{
-	transform: rotate(90deg);
+//	transform: rotate(90deg);
 }
 .school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow{
 	-webkit-animation-name: bounce; /* Safari 4.0 - 8.0 */
@@ -158,7 +178,7 @@ body{
     animation-name: bounce;	
     animation-iteration-count: infinite;
 }
-.school-menu-card:hover > .uk-padding .menu-arrow-icon > .menu-svg-arrow{
+.school-menu-card:hover > .uk-padding .menu-arrow-icon > .academics-menu-svg-arrow{
 	-webkit-animation-name: bounce-down; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 0.8s; /* Safari 4.0 - 8.0 */
     animation-name: bounce-down;	
@@ -168,7 +188,11 @@ body{
 .school-menu-text-title{
 	height: 100px;
 	font-weight: 600;
-	font-size: 2em;
+	font-size: 1.7em;
+		@media #{$tablet}{
+		font-size: 1.5em;
+			height: 70px;
+	}
 }
 .menu-arrow-icon{
 	margin: 40px 0 20px 0;
@@ -181,7 +205,10 @@ body{
 
 .school-age-number{
 	font-weight: 600;
-	font-size: 3.5rem;
+	font-size: 3rem;
+		@media #{$tablet}{
+			font-size: 2.5rem;
+		}
 }
 .school-age-number:hover, superscript:hover{
 	color: white;
@@ -189,13 +216,16 @@ body{
 .superscript{
 	vertical-align: 100%;
 	border-bottom: 1px solid $burgundy;
+		@media #{$tablet}{
+			font-size: 0.7em;
+		}
 }
 .welcome-message-container{
 	height: 100vh;
     width: 80vw;
     position: absolute;
     right: 0;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		display: none;
 	}
 
@@ -206,8 +236,12 @@ body{
 }
 .text-body{
 	font-size: 0.9em;
-	@media #{$phone}{
+	line-height: 1.6;
+	@media #{$phone, $tablet-portrait}{
 		font-size: 0.9em;
+	}
+	@media #{$tablet}{
+		font-size: 0.8em;
 	}
 }
 .home-calendar{
@@ -216,12 +250,16 @@ body{
     position: relative;
     width: 30%;
 	margin-top: -300px;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		margin-left: 0;
 		margin-top: 0;
 		width: auto;
 		position: static;
 		height: auto;
+	}
+	@media #{$tablet}{
+		height: auto;
+		width: 35%;
 	}
 }
 .home-head{
@@ -233,12 +271,16 @@ body{
 	margin-left: 200px;
     background-repeat: no-repeat;
     background-position: center;
-	z-index: 1000;
-	@media #{$phone}{
+	z-index: 1;
+	@media #{$phone, $tablet-portrait}{
 		margin-left: 0;
 		margin-top: 0;
 		width: auto;
 		position: static;
+	}
+	@media #{$tablet}{
+		width: 60vw;
+		margin-left: 100px;
 	}
 
 }
@@ -246,7 +288,7 @@ body{
 	font-weight: 400;
 	font-size: 1.8em;
 	text-align: center;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		text-align: left;
 		font-size: 1.5em;
 	}
@@ -255,8 +297,11 @@ body{
 .column-header{
 	font-weight: 600;
 	font-size: 1.2em;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		font-size: 1.2em;
+	}
+	@media #{$tablet}{
+		font-size: 1em;
 	}
 }
 .calendar-header{
@@ -271,59 +316,84 @@ body{
     height: auto;
     position: relative;
     background-color: white;
-    left: 40%;
+    left: 55%;
 	margin-top: -200px;
-	z-index: 1001;
-	@media #{$phone}{
+	z-index: 2;
+	@media #{$phone, $tablet-portrait}{
 		margin-left: 0;
 		margin-top: 0;
 		width: auto;
 		position: static;
 	}
+	@media #{$tablet}{
+		margin-top: -120px;
+		left: 45%;
+		width: 50vw;
+	}
 }
 .calendar-title{
 	margin-top: 120px;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		margin-top: 0;
 	}
 
 }
 .calendar-events{
 	border-left: 4px solid white;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		margin-top: 30px;
 	}
 }
 .svg-icon{
 	width: 70px;
 	height: auto;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: 55px;
 	}
 }
 .fact-card{
 	display: inline-block;
+	vertical-align: top;
 	width: calc(69vw / 3);
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: auto;
 		margin-top: 15px;
+	}
+	@media #{$tablet}{
+		width: calc(98% / 3);
+//		margin-top: 15px;
+	}
+}
+.application-card{
+	display: inline-block;
+	vertical-align: top;
+	width: 100%;
+	margin-bottom: 100px;
+	@media #{$phone, $tablet-portrait}{
+		width: 100%;
+		margin-top: 15px;
+		margin-bottom: 0px;
+	}
+	@media #{$tablet}{
+		width: auto;
+//		margin-top: 15px;
 	}
 }
 .left-fact-padding{
 	padding-right: 60px;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		padding-right: 0px;
 	}
 }
 .mid-fact-padding{
 	padding: 0 30px;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		padding: 0 0;
 	}
 }
 .right-fact-padding{
 	padding-left: 60px;
-		@media #{$phone}{
+		@media #{$phone, $tablet-portrait}{
 		padding-left: 0px;
 	}
 }
@@ -332,7 +402,7 @@ body{
 	display: inline-block;
 	vertical-align: bottom;
 	width: calc(100% - 120px);
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		padding-top: 15px;
 	}
 }
@@ -341,12 +411,13 @@ body{
 }
 /*ABOUT*/
 .intro-section-container{
-	height: 60vh;
+	min-height: 60vh;
+	height: auto;
     width: 80vw;
 	margin-top: 150px;
     position: relative;
     left: 0;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: 100vw;
 		margin-top: 0;
 		position: static;
@@ -356,16 +427,29 @@ body{
 }
 .intro-section-button{
 	border: 1px solid $burgundy;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		padding: 0 20px;
 		line-height: 45px;
 	}
 }
-.intro-section-button:hover{
+//.intro-section-button:hover{
+//	border: 1px solid $burgundy;
+//	color: $burgundy;
+//	background-color: white;
+//}
+.intro-section-button:hover {
+//	background-color: $burgundy;
 	border: 1px solid $burgundy;
 	color: $burgundy;
 	background-color: white;
+	animation: button-hover-reveal 1s forwards;
 }
+.admission-cta-button:hover{
+	border: 1px solid $burgundy;
+	color: $burgundy;
+	animation: button-hover-reveal 1s forwards;
+}
+
 .page-hero{
 	background-size: cover;
     height: 55vh;
@@ -375,7 +459,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
 	z-index: 1000;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		position: static;
 		height: 35vh;
 		width: 100%;
@@ -385,25 +469,25 @@ body{
 	position: absolute;
   	bottom: 0;
   	right: 0;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		display: none;
 	}
 }
 .page-heading{
 	position: absolute;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		position: static;
 	}
 }
 .intro-text-container{
 	width: 45vw;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: 100vw;
 	}
 }
 .admission-process-section{
 	height: 50vh;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		height: auto;
 	}
 }
@@ -411,14 +495,14 @@ body{
 	vertical-align: top;
 	width: calc(100% - 120px);
 	font-size: 1em;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		font-size: 1.1em;
 		width: auto;
 		text-align: left;
 	}
 }
 .mission-statement-icon{
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: 45px;
 		text-align: center;
 	}
@@ -434,9 +518,12 @@ body{
 }
 .admission-cta-button-inner{
 	width: 50vw;
-    height: 10vh;
+    height: 7vh;
+	color: white;
+	background: $burgundy;
+	padding-top: 10px;
     border: none;
-	@media #{$phone}{
+	@media #{$phone, $tablet-portrait}{
 		width: auto;
 		height: auto;
 	}
@@ -515,7 +602,9 @@ header {
 	width: 50px;
 	top: 0;
 }
-
+.logo-white{
+	width: 60px;
+}
 
 @media only screen and (max-width: 640px) {
   .mobile-center {
@@ -620,8 +709,8 @@ header {
 
 }
 @keyframes bounce-down {
-  50% { transform: translateY(20px); }
-
+  50% { transform: translateY(20px); 
+	}
 }
 @keyframes menu-hover-reveal{
 	0% {
@@ -632,13 +721,24 @@ header {
 		background-color: $burgundy;
 		box-shadow: 20px 25px #ff00003d;
 	}
-  100% {
-	  
+  100% {  
 	  background-color: $burgundy;
 	  box-shadow: 15px 20px #ff00003d;
+	  
   }
 }
-li a {
+@keyframes button-hover-reveal{
+	0% {
+		box-shadow: 5px 10px white;
+  }
+	25%{
+		box-shadow: 20px 25px #ff00003d;
+	}
+  100% {
+	  box-shadow: 10px 15px #ff00003d;
+  }
+}
+.highlight{
   display: inline-block;
   position: relative;
   z-index: 2;
@@ -651,15 +751,15 @@ li a {
   padding: 0 10px;
   white-space: no-wrap;
 }
-li a:before {
+.highlight:before {
   content: '';
   display: inline-block;
   width: 100%;
-  height: 60%;
+  height: 100%;
   position: absolute;
   z-index: 1;
   left: 0px;
-  bottom: 22%;
+  
   background-image: linear-gradient(to right, rgba(255,255,255,0) 50%, #ff00003d 50%);
   background-position: -0% 0;
   background-size: 200% 10px;
@@ -669,6 +769,6 @@ li a:before {
   transform: skew(0deg, -1.5deg);
   opacity: 0.8;
 }
-li a:hover:before {
+.highlight:hover:before {
   background-position: -99.99% 0;
 }
